# depot

./: .checkignore  .gitignore  .travis.yml  LICENSE  README.md  README.rst  pyproject.toml  setup.py  test_requirements.txt  tox.ini
.github/workflows/: run-tests.yml
depot/: _compat.py  factory.py  manager.py  middleware.py  utils.py  validators.py
depot/fields/: interfaces.py  ming.py  sqlalchemy.py  upload.py  utils.py
depot/fields/filters/: image.py  interfaces.py  thumbnails.py
depot/fields/specialized/: image.py
depot/io/: awss3.py  boto3.py  gcs.py  gridfs.py  interfaces.py  local.py  memory.py  utils.py
docs/: Makefile  api.rst  conf.py  database.rst  index.rst  make.bat  requirements.txt  userguide.rst
docs/_themes/artichoke/: layout.html  theme.conf
docs/_themes/artichoke/static/: artichoke.css_t
examples/django/: README.rst  manage.py
examples/django/depotexample/: settings.py  urls.py  views.py  wsgi.py
examples/flask/: README.rst  app.py
examples/flask/templates/: index.html
examples/turbogears/: MANIFEST.in  README.rst  development.ini  setup.cfg  setup.py  test.ini
examples/turbogears/depotexample/: __init__.py
examples/turbogears/migration/: env.py
filedepot/: _compat.py
filedepot/io/: interfaces.py  local.py
tests/: base_ming.py  base_sqla.py  test_awss3_storage.py  test_boto3_storage.py  test_depot_manager.py  test_fields_basic.py  test_fields_ming.py  test_fields_sqlalchemy.py  test_gcs_storage.py  test_gridfs_storage.py  test_local_storage.py  test_storage_interface.py  test_wsgi_middleware.py  utils.py
(+32 files in other folders)
